Fix collapsed group list margin

--- a/src/assets/styles/cmps/group/GroupList.css
+++ b/src/assets/styles/cmps/group/GroupList.css
@@ -20,7 +20,7 @@
     &.collapsed {
         grid-template-columns: 1fr;
         gap: 20px;
-        margin-inline-end: 20px;
+        margin: 16px 16px 20px 36px;
         cursor: grabbing;
     }
 
